syntax = "proto3";
package com.example.grpc;

message FileData {
  string filePath = 1;
  int32 nodeId = 2;
  int64 loadId = 3;
  bool finalize = 4;
}

message Chunks {
  oneof data {
    FileData metaData = 1;
    bytes chunks = 2;
  }
}

message SuccessStatus {
  bool success = 1;
}

message toDeleteFile {
  int64 loadId = 1;
}

service DatanodeService {
  rpc writeFile(stream Chunks) returns (SuccessStatus);
  rpc readFile(FileData) returns (stream Chunks);
  rpc deleteFile(toDeleteFile) returns (SuccessStatus);
}